--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<h1>Hellow World!</h1>
 		<table border="1" bgcolor="#46ffda">
 			        <tr>
-			            <td><a href="../test1/demo1-1.html">作业1</a></td>
+			            <td><a href="../test1/demo1.html">作业1</a></td>
 			            <td><a href="../test2/demo2.html">作业2</a></td>
 			        </tr>
 		</table>
