--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			        <tr>
 			            <td><a href="../test1/demo1.html">作业1</a></td>
 			            <td><a href="../test2/demo2.html">作业2</a></td>
+				    <td><a href="../test3/demo3.html">作业3</a></td>
 			        </tr>
 		</table>
 	</body>
