--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 				    	<td><a href="../test3/demo3.html">作业3</a></td>
 				    	<td><a href="../test4/demo4.html">作业4</a></td>
 					<td><a href="../test5/demo5.html">作业5</a></td>
+					<td><a href="../test6/demo6.html">作业6</a></td>
+					<td><a href="../test7/demo7.html">作业7</a></td>
+					<td><a href="../大作业/index.html">大作业</a></td>
 			        </tr>
 		</table>
 	</body>
